[gd_scene load_steps=11 format=3 uid="uid://dfuraxyvtrqks"]

[ext_resource type="Script" path="res://src/UI/body_selection_styles.gd" id="1_c2tew"]
[ext_resource type="PackedScene" uid="uid://de5x4r7qbv6uk" path="res://src/UI/Components/input_with_drop_down.tscn" id="1_uy3x2"]
[ext_resource type="PackedScene" uid="uid://bnbfjh0vj0q0x" path="res://src/UI/Components/input.tscn" id="2_g6qd3"]
[ext_resource type="Script" path="res://src/UI/SelectionStyles/body_outlines.gd" id="4_3l7eb"]
[ext_resource type="Script" path="res://src/UI/SelectionStyles/body_shakes.gd" id="5_3oius"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4spk"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgxrb"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4idj4"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lf7nh"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8my2"]
content_margin_right = 6.0
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="BodySelectionStyles" type="VBoxContainer"]
offset_right = 158.0
offset_bottom = 163.0
script = ExtResource("1_c2tew")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="RemoveButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_g4spk")
theme_override_styles/focus = SubResource("StyleBoxFlat_kgxrb")
text = "X"

[node name="StartContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="StartContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_START"
text_overrun_behavior = 3

[node name="StartInput" parent="StartContainer" instance=ExtResource("2_g6qd3")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="EndContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="EndContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_END"
text_overrun_behavior = 3

[node name="EndInput" parent="EndContainer" instance=ExtResource("2_g6qd3")]
layout_mode = 2
size_flags_horizontal = 3
type = 1

[node name="FontContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="FontContainer"]
layout_mode = 2
text = "KEY_FONT"

[node name="FontName" parent="FontContainer" instance=ExtResource("1_uy3x2")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="FontContainer"]
layout_mode = 2

[node name="FontSize" parent="FontContainer/HBoxContainer" instance=ExtResource("2_g6qd3")]
layout_mode = 2
size_flags_horizontal = 3
type = 1
suffix = "px"

[node name="Color" type="ColorPickerButton" parent="FontContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoldItalicContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Bold" type="CheckButton" parent="BoldItalicContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_BOLD"
text_overrun_behavior = 3

[node name="Italic" type="CheckButton" parent="BoldItalicContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_ITALIC"
text_overrun_behavior = 3

[node name="HeaderOutlines" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HeaderOutlines"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_OUTLINES"

[node name="AddButton" type="Button" parent="HeaderOutlines"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_4idj4")
theme_override_styles/focus = SubResource("StyleBoxFlat_lf7nh")
text = "+"

[node name="BodyOutlines" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w8my2")
script = ExtResource("4_3l7eb")

[node name="ScrollContainer" type="ScrollContainer" parent="BodyOutlines"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BodyOutlines/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BodyOutlines/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderShakes" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HeaderShakes"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_SHAKES"

[node name="AddButton" type="Button" parent="HeaderShakes"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_4idj4")
theme_override_styles/focus = SubResource("StyleBoxFlat_lf7nh")
text = "+"

[node name="BodyShakes" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w8my2")
script = ExtResource("5_3oius")

[node name="ScrollContainer" type="ScrollContainer" parent="BodyShakes"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BodyShakes/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BodyShakes/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="changed" from="StartContainer/StartInput" to="." method="_on_start_input_changed"]
[connection signal="changed" from="EndContainer/EndInput" to="." method="_on_end_input_changed"]
[connection signal="changed" from="FontContainer/FontName" to="." method="_on_font_name_changed"]
[connection signal="changed" from="FontContainer/HBoxContainer/FontSize" to="." method="_on_font_size_changed"]
[connection signal="color_changed" from="FontContainer/HBoxContainer/Color" to="." method="_on_color_color_changed"]
[connection signal="toggled" from="BoldItalicContainer/Bold" to="." method="_on_bold_toggled"]
[connection signal="toggled" from="BoldItalicContainer/Italic" to="." method="_on_italic_toggled"]
[connection signal="pressed" from="HeaderOutlines/AddButton" to="BodyOutlines" method="_on_add_button_pressed"]
[connection signal="pressed" from="HeaderShakes/AddButton" to="BodyShakes" method="_on_add_button_pressed"]
